# meteor

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: ci.yml
config/: settings.toml
docs/: SETUP.md
meteor/: __main__.py  client.py  logger.py  schema.sql  utils.py
meteor/cogs/: __init__.py  discord.py  info.py
meteor/config/: __init__.py  errors.py  models.py
meteor/migrations/: __init__.py
tests/: config_test.py
