[project]
name = "meteor"
version = "2.0.0-alpha.1"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "blake3>=1.0.4",
    "discord-py>=2.5.2",
    "orjson>=3.10.15",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "rtoml>=0.12.0",
    "uvloop>=0.21.0; sys_platform == 'linux' or sys_platform == 'darwin'",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.9.9"]

[tool.pytest.ini_options]
cache_dir = ".meteor/pytest"

[tool.ruff]
cache-dir = ".meteor/ruff"
exclude = [".venv", ".ruff_cache", ".pytest_cache", ".vscode", "tests"]
line-length = 110

[tool.ruff.lint]
extend-select = [
    "A",     # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",     # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C90",   # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "E",     # https://docs.astral.sh/ruff/rules/#error-e
    "ERA",   # https://docs.astral.sh/ruff/rules/#eradicate-era
    "FLY",   # https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB",  # https://docs.astral.sh/ruff/rules/#refurb-furb
    "I",     # https://docs.astral.sh/ruff/rules/#isort-i
    "N",     # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",   # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "RET",   # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE",   # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "SIM",   # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF",   # https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "UP",    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",     # https://docs.astral.sh/ruff/rules/#warning-w
]

[tool.ruff.format]
quote-style = "single"
